...

  final p = (await db.getAll('SELECT count(*) AS c FROM pannes')).first['c'];
  if (((p as num?) ?? 0).toInt() == 0) {
    const pannes = [
      'Écran cassé',
      'Vitre fissurée',
      'Batterie défectueuse',
      'Ne s\'allume pas',
      'Problème de charge',
      'Connecteur de charge HS',
      'Haut-parleur muet',
      'Micro défectueux',
      'Caméra floue',
...
      .first['c'];
  if (((m as num?) ?? 0).toInt() == 0) {
    const modeles = [
      ['Apple', 'iPhone 7', 'smartphone'],
      ['Apple', 'iPhone 8', 'smartphone'],
      ['Apple', 'iPhone X', 'smartphone'],
      ['Apple', 'iPhone 11', 'smartphone'],
      ['Apple', 'iPhone 12', 'smartphone'],
      ['Apple', 'iPhone 13', 'smartphone'],
      ['Samsung', 'Galaxy A04', 'smartphone'],
      ['Samsung', 'Galaxy A10', 'smartphone'],
      ['Samsung', 'Galaxy A20', 'smartphone'],
      ['Samsung', 'Galaxy A50', 'smartphone'],
...
